# backend-infra/docs/swagger.yaml
@@ -127,6 +127,29 @@ paths:
       summary: Login with phone
       tags:
       - auth
+  /v1/profile/me:
+    get:
+      consumes:
+      - application/json
+      description: Get authenticated user's profile information
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - BearerAuth: []
+      summary: Get current user profile
+      tags:
+      - protected
   /v1/register/email:
     post:
       consumes:
